--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
+tests/__pycache__/testIndex.cpython-34.pyc
+tests/__pycache__/
 .python-version
 .idea
+__pycache__/
+tests/__pycache__/testIndex.cpython-34.pyc
