--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - "pip install . --use-mirrors"
   - "pip install -r requirements.txt --use-mirrors"
 # command to run tests
-script: nosetests
+script: python testIndex.py
